--- a/tests/robot/requirements.txt
+++ b/tests/robot/requirements.txt
@@ -1,4 +1,4 @@
-robotframework==3.0.2
-requests==2.18.4
-robotframework-requests==0.4.7
+robotframework>=3.1.1
+requests>=2.21.0
+robotframework-requests>=0.5.0
 dist/robotframework-mockserver-development.tar.gz
