fix support for JSON Schema and HTTP headers, release 0.0.7

--- a/tests/robot/requirements.txt
+++ b/tests/robot/requirements.txt
@@ -2,3 +2,5 @@ robotframework>=3.1.1
 requests>=2.21.0
 robotframework-requests>=0.5.0
 dist/robotframework-mockserver-development.tar.gz
+robotframework-jsonlibrary==0.3
+robotframework-jsonschemalibrary==1.0
